Fixed footer with save button overlapping the form

--- a/FrontEnd/Modules/Templates/Css/WtsConfiguration.css
+++ b/FrontEnd/Modules/Templates/Css/WtsConfiguration.css
@@ -74,3 +74,6 @@
     padding-left: 0 !important;
     padding-right: 215px;
 }
+#serviceTab .formview .item:last-child, #timersTab .formview .item:last-child, #actionsTab .formview .item:last-child {
+    margin-bottom: 70px !important; 
+}
